css/styles.css
body {
  background-color: #d9d9d9;
}

.jumbotron {
  background-color: #0000e6;
}

#subtitle {
  color: white;
  margin: 40px;
  margin-left: 50px;
}

body img {
  margin-left: 30px;
}

h1 {
  text-align: center;
  background-color: #b3ffff;
  border: 2px solid #0000FF;
}

#subtitle {
  color: white;
  text-align: center;
}

#caption {
  font-style: italic;
  margin: 10px;
  margin-left: 30px;
}

#me {
  text-align: center;
  margin-left: 400px;
  width: 300px;
  background-color: #b3ffff;
  border: 2px solid #0000FF;
}

h2 {
  margin-bottom: 20px;
}

.about-me {
  float: left;
  margin: 30px;
  margin-right: 30px;
  background-color: #eb2d53;
}

.my-info {
  float: left;
  width: 500px;
  margin-left: 80px;
}

.panel-heading {
  border: 5px solid;
}

.programming {
  float: right;
  width: 500px;
  line-height: 22px;
}

.programming h3 {
  text-align: center;
}

.note {
  font-style: italic;
}

.projects {
  float: left;
  margin-left: 25px;
  width: 600px;
}

.projects h2 {
  text-align: center;
  width: 300px;
  margin-left: 150px;
  background-color: #b3ffff;
  border: 2px solid #0000FF;
}

.projects ol {
  font-weight: bold;
  line-height: 25px;
}

.projects ul {
  font-weight: normal;
  background-color: #ffff80;
}

#friends {
  margin: 20px;
  margin-top: 125px;
  float: right;
}

#family {
  margin: 20px;
  margin-top: 40px;
  float: right;
}

#footer {
  float: left;
  font-size: 15px;
  line-height: 100px;
  color: red;
}

